apps/fleetman/app/ingress-public.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - host: fleetman.devgovcio.com
      http:
        paths:
        - path: /
          backend:
            serviceName: fleetman-webapp
            servicePort: 80
